--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "@syncfusion/ej2-angular-kanban": "^24.2.3-ngcc",
-    
+    "@syncfusion/ej2-angular-navigations": "^24.2.4-ngcc",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
